--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
-  "semi": false,
-  "singleQuote": true,
-  "tabWidth": 4
+    "semi": false,
+    "arrowParens": "always",
+    "singleQuote": true,
+    "tabWidth": 4,
+    "endOfLine": "auto"
 }
